--- a/package.json
+++ b/package.json
@@ -1,21 +1,6 @@
 {
   "name": "may-project",
   "version": "1.0.0",
-  "description": "",
-  "main": "gulpfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/soress/may-project.git"
-  },
-  "author": "soress",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/soress/may-project/issues"
-  },
-  "homepage": "https://github.com/soress/may-project#readme",
   "devDependencies": {
     "browser-sync": "^2.18.1",
     "del": "^2.2.2",
@@ -23,16 +8,24 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^2.3.2",
+    "gulp-csscomb": "^3.0.8",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.1.1",
+    "gulp-jshint": "^2.0.4",
     "gulp-less": "^3.3.0",
     "gulp-rename": "^1.2.2",
+    "gulp-rev": "^7.1.2",
+    "gulp-rev-replace": "^0.4.3",
+    "gulp-sass": "^3.1.0",
     "gulp-sftp": "^0.1.5",
     "gulp-uglify": "^2.0.0",
     "gulp-uncss": "^1.0.6",
     "gulp-useref": "^3.1.2",
     "gulp-watch": "^4.3.10",
     "imagemin-pngquant": "^5.0.0",
+    "run-sequence": "^1.2.2",
     "wiredep": "^4.0.0"
   }
 }
